# 3dsMaxMCP

./: .gitignore  LICENSE  README.md  pyproject.toml  startup_mcp_listener.ms
max_mcp/: OperationManager.py  __init__.py  __main__.py  log.py  server.py
max_mcp/connector/: __init__.py  max_connection.py  max_server_listener.py
max_mcp/max_tools/animation/: set_keyframe.py  set_time_range.py
max_mcp/max_tools/light/: create_light.py
max_mcp/max_tools/material/: assign_material.py  create_material.py
max_mcp/max_tools/object/: add_modifier.py  clone_object.py  create_object.py  delete_object.py  get_object_properties.py  rename_object.py  select_objects.py  set_object_property.py  set_object_transform.py
max_mcp/max_tools/scene/: export_file.py  get_scene_info.py  get_scene_objects.py  import_file.py  new_scene.py  open_scene.py  save_scene.py
max_mcp/max_tools/utils/: execute_maxscript.py  execute_python_script.py  get_max_version.py
max_mcp/utils/: __init__.py
