[project]
name = "max-mcp"
version = "0.1.0"
description = "3ds Max MCP Server - 通过 MCP 协议远程控制 3ds Max"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "max-mcp Contributors"}
]
keywords = ["3dsmax", "mcp", "model-context-protocol", "autodesk", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-core>=2.0.0",
    "six>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/317431629/3dsMaxMCP"
Repository = "https://github.com/317431629/3dsMaxMCP.git"

[project.scripts]
max-mcp = "max_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["max_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "max_mcp/**",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "startup_mcp_listener.ms",
]
